Fix header z-index

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 99;
+  z-index: 75;
   background-color: $header-background-color;
   height: $header-height;
 
